# order_book

./: .behaverc  .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.sock  Dockerfile  Makefile  Pipfile  README.md  aws.cpp  aws.hpp  bug.txt  bug_1.txt  bug_11.txt  bug_12.txt  bug_2.txt  bug_2_again.txt  bug_4.txt  example_ws.cpp  logic.cpp  logic.hpp  main.cpp  main.hpp  main.py  order_book.cpp  order_book.hpp  run_server.sh  setup.py  shit.txt  shit2.txt  socket.cpp  socket.hpp  start_all.sh  test.cpp  test.hpp  valgrind.txt
aws/: build.sh  get_message.py  poll_messags.py  send_ws.py
aws/connection-api-ecs/: notes.txt
aws/sockets/: build.sh
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: OrderBook.tsx  OrderForm.tsx  OrdersList.tsx  SpreadDisplay.tsx  StockChart.tsx
frontend/src/pages/: OrdersPage.tsx  StockDetailPage.tsx  StocksListPage.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
old/: CMakeLists.txt
old/cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CrowConfig.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  socket
python_scripts/: post_matches.py  post_stock_price.py
src/: binder.cpp  order_book.cpp  order_book.hpp
src/book/: mymath.cpp  mymath.hpp  order_book.hpp
src/main/cpp/: binder.cpp  money.cpp  money.hpp  order_book.cpp  order_book.hpp  order_book2.cpp  order_book2.hpp
src/main/py/: api.py  main.py  (+1 more)
src/tests/: run_tests.cpp  run_tests.hpp  test.cpp  test.hpp
test2.a.dSYM/Contents/: Info.plist
(+14 files in other folders)
